# soymilkytracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/skills/commit-and-push/: SKILL.md
.claude/skills/docs-engineering/: SKILL.md
.claude/skills/release-engineering/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/workflows/: ci.yml
assets/fonts/: ATTRIBUTION
assets/soundfonts/: ATTRIBUTION  Open8bitVChiptuner.sf2
crates/tracker-client/: Cargo.toml  index.html
crates/tracker-client/src/: app.rs  lib.rs  main.rs  pattern_editor.rs
crates/tracker-engine/: Cargo.toml
crates/tracker-engine/src/: audio.rs  dsp.rs  gus.rs  lib.rs  modfile.rs  player.rs  s3m.rs  synth.rs  xm.rs
crates/tracker-engine/src/backend/: mod.rs  native.rs  wasm.rs
crates/tracker-server/: Cargo.toml
crates/tracker-server/src/: main.rs
crates/tracker-types/: Cargo.toml
crates/tracker-types/src/: api.rs  composition.rs  lib.rs
doc/: TODOs.md  product_design.md  ui-mockups.md
poc/cpal-native/: Cargo.toml
poc/cpal-native/src/: main.rs
poc/egui-grid/: Cargo.toml  index.html
poc/egui-grid/src/: app.rs  lib.rs  main.rs
poc/oxisynth-wasm/: Cargo.toml  index.html
poc/oxisynth-wasm/src/: lib.rs
poc/wasm-audio/: Cargo.toml  index.html
poc/wasm-audio/src/: lib.rs
