[workspace]
resolver = "2"
members = [
    "crates/tracker-types",
    "crates/tracker-engine",
    "crates/tracker-client",
    "crates/tracker-server",
]

[workspace.dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",    features = ["full"] }
anyhow      = "1"
tracing     = "0.1"
uuid        = { version = "1",    features = ["v4", "serde"] }
chrono      = { version = "0.4",  features = ["serde"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
