[package]
name = "tracker-engine"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tracker-types = { path = "../tracker-types" }
anyhow  = { workspace = true }
tracing = { workspace = true }
fundsp  = "0.19"
oxisynth = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen          = "0.2"
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "AudioNode",
    "AudioDestinationNode",
    "BaseAudioContext",
    "Blob",
    "BlobPropertyBag",
    "MessagePort",
    "Url",
    "Window",
] }
