[package]
name = "poc-egui-grid"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "poc-egui-grid"
path = "src/main.rs"

[dependencies]
egui   = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
